feat(ui): add bootanimation source selection

--- a/lib/app/core/values/languages/app_en.arb
+++ b/lib/app/core/values/languages/app_en.arb
@@ -1,4 +1,7 @@
 {
   "@@locale": "en",
-  "magiskModuleProperties": "Magisk module properties"
+  "magiskModuleProperties": "Magisk module properties",
+  "selectFile": "Select file",
+  "type": "Type",
+  "video": "Video"
 }
