--- a/lib/app/core/values/languages/app_zh.arb
+++ b/lib/app/core/values/languages/app_zh.arb
@@ -1,7 +1,15 @@
 {
   "@@locale": "zh",
+  "author": "作者",
+  "description": "描述",
   "magiskModuleProperties": "Magisk模块属性",
+  "moduleID": "模块ID",
+  "moduleName": "模块名称",
+  "optional": "可选",
   "selectFile": "选择文件",
   "type": "类型",
+  "updateJson": "更新json",
+  "version": "版本",
+  "versionCode": "版本号",
   "video": "视频"
 }
