feat(bootanimation): add parameters to generation

--- a/lib/app/core/values/languages/app_en.arb
+++ b/lib/app/core/values/languages/app_en.arb
@@ -2,8 +2,10 @@
   "@@locale": "en",
   "animationGeneralParameters": "Animation general parameters",
   "animationGeneration": "Animation generation",
+  "animationPlayCount": "Animation play count",
   "author": "Author",
   "description": "Description",
+  "framesToDelayAfterThisPart": "Frames to delay after this part",
   "height": "Height",
   "magiskModuleProperties": "Magisk module properties",
   "moduleID": "Module ID",
