--- a/lib/app/core/values/languages/app_zh.arb
+++ b/lib/app/core/values/languages/app_zh.arb
@@ -2,8 +2,10 @@
   "@@locale": "zh",
   "animationGeneralParameters": "动画通用参数",
   "animationGeneration": "动画生成",
+  "animationPlayCount": "动画播放次数",
   "author": "作者",
   "description": "描述",
+  "framesToDelayAfterThisPart": "这部分之后要延迟的帧数",
   "height": "高度",
   "magiskModuleProperties": "Magisk模块属性",
   "moduleID": "模块ID",
